# isana-lang

./: CMakeLists.txt  FEATURES.rst  LICENSE.rst  README.rst
modules/: FindLLVM.cmake
src/: CMakeLists.txt
src/include/codegen/: builtin.hpp  llvm.hpp
src/include/codegen/builtin/: utils.hpp
src/include/env/: dict.hpp  resolver.hpp
src/include/reader/: lexer.hpp  parser.hpp
src/include/reader/ast/: atom.hpp  function.hpp  list.hpp  node.hpp  syntax.hpp
src/include/runtime/: intrinsics.hpp  memory.hpp  object.hpp
src/lib/: CMakeCache.txt
src/lib/codegen/: CMakeLists.txt  llvm.cpp
src/lib/codegen/builtin/: CMakeLists.txt  datatypes.cpp  init.cpp  symbols.cpp  syntaxes.cpp  utils.cpp
src/lib/codegen/builtin/functions/: io.cpp  pairs_lists.cpp  predicates.cpp
src/lib/env/: CMakeLists.txt  dict.cpp  resolver.cpp
src/lib/reader/: CMakeLists.txt  lexer.cpp  parser.cpp
src/lib/reader/ast/: CMakeLists.txt  atom.cpp  codegen.cpp  function.cpp  list.cpp  syntax.cpp
src/lib/runtime/: CMakeLists.txt  equivalence.cpp  exception.cpp  intrinsics.cpp  io.cpp  memory.cpp
src/repl/: CMakeLists.txt  repl.cpp
